Bug 965550 - Tab stip doesn't touch scroll if last tab is partially visible r=mbrubeck
UltraBlame original commit: dc386405bf17f0ede70a68087e44303c2268d02d

--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -127,6 +127,12 @@
   height: @tabs_height@;
 }
 
+
+.tabs-scrollbox > .arrowscrollbox-scrollbox > .scrollbox-innerbox {
+  -moz-padding-start: calc(2 * @tabs_scrollarrow_width@);
+  -moz-margin-start: calc(-2 * @tabs_scrollarrow_width@);
+}
+
 #tabs-container[viewstate="snapped"] {
   visibility: hidden;
 }
